[gd_scene load_steps=4 format=3 uid="uid://cucsqn0d8brf5"]

[ext_resource type="Script" path="res://scenes/ui/build_menu/build_menu.gd" id="1_122em"]
[ext_resource type="Texture2D" uid="uid://xltgrajcqeku" path="res://assets/items/tools/hoe.png" id="2_nspri"]
[ext_resource type="Texture2D" uid="uid://dpwgoqwnsxo2o" path="res://assets/structures/work_station.png" id="3_8egqw"]

[node name="BuildMenu" type="Control"]
layout_mode = 3
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_122em")

[node name="BuildMenuOpen" type="PanelContainer" parent="."]
layout_mode = 1
offset_left = -52.0
offset_right = 36.0
offset_bottom = 134.0

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BuildMenuOpen/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CloseBuildMenuButton" type="Button" parent="BuildMenuOpen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "Close"

[node name="GridContainer" type="GridContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="TillSoil" type="PanelContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/TillSoil"]
layout_mode = 2
size_flags_vertical = 4

[node name="TillSoilButton" type="TextureButton" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/TillSoil/MarginContainer"]
layout_mode = 2
tooltip_text = "till soil"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_nspri")

[node name="Workbench" type="PanelContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Workbench"]
layout_mode = 2

[node name="WorkbenchButton" type="TextureButton" parent="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Workbench/MarginContainer"]
layout_mode = 2
tooltip_text = "workbench"
mouse_default_cursor_shape = 2
texture_normal = ExtResource("3_8egqw")

[node name="BuildMenuClosed" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
offset_left = 26.0
offset_right = 42.0
offset_bottom = 22.0

[node name="MarginContainer" type="MarginContainer" parent="BuildMenuClosed"]
layout_mode = 2

[node name="OpenBuildMenuButton" type="Button" parent="BuildMenuClosed/MarginContainer"]
layout_mode = 2
text = "<"

[connection signal="pressed" from="BuildMenuOpen/MarginContainer/VBoxContainer/HBoxContainer/CloseBuildMenuButton" to="." method="_on_close_build_menu_button_pressed"]
[connection signal="button_up" from="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/TillSoil/MarginContainer/TillSoilButton" to="." method="_on_till_soil_button_button_up"]
[connection signal="pressed" from="BuildMenuOpen/MarginContainer/VBoxContainer/GridContainer/Workbench/MarginContainer/WorkbenchButton" to="." method="_on_beet_button_pressed"]
[connection signal="pressed" from="BuildMenuClosed/MarginContainer/OpenBuildMenuButton" to="." method="_on_open_build_menu_button_pressed"]
